# mynft

MyNFT/: pnpm-lock.yaml
MyNFT/src/: App.css
MyNFT/src/components/: FirstPage.js  Gallery.js  Home.js  cardComp.js
apes/: check.ipynb  interface.py  pyproject.toml
